// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateCustomTransactionLink with deposit matches the snapshot 1`] = `
<button
  color="#9DB06A"
  type="text"
  class="css-10yl9t5"
>
  ?
</button>
`;

exports[`CreateCustomTransactionLink with dispense matches the snapshot 1`] = `
<button
  color="#E86C76"
  type="text"
  class="css-2lirzo"
>
  ?
</button>
`;
